...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Home.Activity.DetailLeague">

        <SearchView
            android:imeOptions="actionSearch"
            android:id="@+id/searchViewNext"
            android:layout_width="wrap_content"
            app:actionViewClass="android.support.v7.widget.SearchView"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
...
